--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=".css">
+    <script type="module" src="app.js"></script>
+    <title>CALLOF-PYTHON</title>
+</head>
+<body>
+    <div class="container"></div>     
+    <div id="app">
+    <div class="container" id="root"></div>  
+</body>
+</html>
