--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".css">
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="app.js"></script>
     <title>CALLOF-PYTHON</title>
 </head>
 <body>
-    <div class="container"></div>     
+    <H1>MI JUEGO NO BULTO</H1>
+    <div class="container">   
     <div id="app">
-    <div class="container" id="root"></div>  
+    </div>  
 </body>
-</html>
+</html>                  
