--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <i class="fa-brands fa-python text-2xl"></i>
             </div>
             <div>
-                <h1 class="text-xl font-bold text-white tracking-tight">PyStarter <span class="text-blue-500">.io</span></h1>
+                <h1 class="text-xl font-bold text-white tracking-tight">CALL-OF-<span class="text-blue-500">PY</span></h1>
                 <p class="text-xs text-slate-500 font-medium">Aprende código real</p>
             </div>
             <!-- Botón menú móvil -->
@@ -135,7 +135,7 @@
                 <a href="#" class="text-slate-500 hover:text-blue-400 transition-colors"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#" class="text-slate-500 hover:text-blue-400 transition-colors"><i class="fa-solid fa-globe"></i></a>
             </div>
-            <p class="text-xs text-slate-600">&copy; 2023 PyStarter Education</p>
+            <p class="text-xs text-slate-600">&copy; 2023 Callof-py Education</p>
         </div>
     </aside>
 
