--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <i class="fa-brands fa-python text-2xl"></i>
             </div>
             <div>
-                <h1 class="text-xl font-bold text-white tracking-tight">CALL-OF-<span class="text-blue-500">PY</span></h1>
+                <h1 class="text-xl font-bold text-white tracking-tight">CallOf-<span class="text-blue-500">PY</span></h1>
                 <p class="text-xs text-slate-500 font-medium">Aprende código real</p>
             </div>
             <!-- Botón menú móvil -->
